--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,3 +1,15 @@
 .profile__add-button{
-    
+  background-image: url(../../../images/profile/__add-button.svg);
+  background-repeat: no-repeat;
+  background-size: 22px 22px;
+  background-position: center;
+  width: 150px;
+  height: 50px;
+  background-color: black;
+  justify-self: flex-end;
+  margin-left: auto;
+  padding: 0;
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 2px;
 }
