--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -1,2 +1,10 @@
 .profile__description {
+  margin-left: 30px;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  padding: 0;
+  margin: 0 0 0 30px;
+  grid-column: 1/3;
+  grid-row: 2;
 }
