--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -1,2 +1,11 @@
 .profile__info {
+  max-width: 45%;
+  display: grid;
+  grid-template-columns: -webkit-max-content -webkit-min-content;
+  grid-template-columns: max-content min-content;
+  grid-template-rows: repeat(2,-webkit-min-content);
+  grid-template-rows: repeat(2,min-content);
+  grid-column-gap: 17px;
+  grid-row-gap: 16px;
+  align-items: end;
 }
