--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,2 +1,9 @@
 .profile__name {
+  font-weight: 500;
+  font-size: 42px;
+  line-height: 48px;
+  padding: 0;
+  margin: 0 0 0 30px;
+  grid-column: 1;
+  grid-row: 1;
 }
