--- a/pages/index.css
+++ b/pages/index.css
@@ -1,10 +1,11 @@
 @import url(../vendor/normalize.css);
 @import url(../fonts/fonts.css);
 @import url(../blocks/page/page.css);
+@import url(../blocks/button/button.css);
+@import url(../blocks/content/content.css);
 /* header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
 /* profile */
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
@@ -16,6 +17,19 @@
 /* elements */
 @import url(../blocks/elements/elements-container.css);
 @import url(../blocks/elements/elements.css);
+@import url(../blocks/elements/__image/element__image.css);
+@import url(../blocks/elements/__title/element__title.css);
+@import url(../blocks/elements/__heart/element__heart.css);
+@import url(../blocks/elements/__heart/element__heart_button.css);
+@import url(../blocks/elements/__heart/element__heart-active.css);
 /* footer */
 @import url(../blocks/footer/footer.css);
-@import url(../blocks/footer/__copyright/.footer__copyright.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
+/* popup */
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__edit-profile/popup__edit-profile.css);
+@import url(../blocks/popup/__edit-name/popup__edit-name.css);
+@import url(../blocks/popup/__edit-descriptio/popup__edit-descriptio.css);
+@import url(../blocks/popup/__button-save/popup__button-save.css);
