--- a/blocks/popup/__edit-name/popup__edit-name.css
+++ b/blocks/popup/__edit-name/popup__edit-name.css
@@ -1,2 +1,11 @@
 .popup__edit-name {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  border-bottom: 1px solid #000000;
+  box-sizing: border-box;
+  max-width: 358px;
+  padding: 0;
+  margin: 54px 36px 0 36px;
+  max-height: 27px;
 }
