--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,4 +1,5 @@
 .popup {
+  background-color: rgb(0,0,0,.5);
   align-items: center;
   display: flex;
   justify-content: center;
@@ -9,6 +10,7 @@
   padding: 0;
   position: fixed;
   width: 100%;
+  visibility: hidden;
 }
 
   /* transition: visibility .7s,opacity .7s linear; 
