--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,12 +1,16 @@
 .profile__edit-button {
-  background-image: url(../../../images/profile/edit_b.svg);
-  border: none;
-  background-color: black;
-  background-repeat: no-repeat;
   width: 24px;
   height: 24px;
   margin: 0;
   padding: 0;
   grid-column: 2;
   grid-row: 1;
+}
+
+.element__heart_button{
+  width: 22px;
+  height: 19px;
+  margin: 30px 30px 30px auto;
+  grid-row: 2; 
+  grid-column: 1;
 }
