--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -6,8 +6,9 @@
 
 @media screen and (max-width:450px){
   .header__logo{
-  padding-bottom: 31.6px;
-  height: 24.4px;
-  width: 103.74px;
+    padding-bottom: 31.6px;
+    height: 24.4px;
+    width: 103.74px;
+    margin-left: 27px;
   }
 }
