--- a/blocks/button/button.css
+++ b/blocks/button/button.css
@@ -4,4 +4,11 @@
     -webkit-box-sizing: border-box;
     padding: 0;
     cursor: pointer;
-}
+    opacity: 1;
+    transition-duration: 2s;
+  }
+  
+  .button:hover{
+    opacity: 0.5;
+    transition-duration: 2s;
+  }
