--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -4,11 +4,32 @@
   list-style-type: none;
   padding: 0;
   margin-top: 47px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 17px;
   grid-row-gap: 20px;
   overflow: hidden;
-  max-width: 880px;
-  max-height: 744px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(282px,1fr));
 }
+
+@media screen and (max-width:950px) { 
+  .elements{
+    max-width: 100%;
+    padding-top: 36px;
+  }
+ } 
+
+@media screen and (max-width:800px) { 
+  .elements{
+    max-width: 90%;
+    padding-top: 36px;
+    margin: 0 auto;
+  }
+ } 
+
+ @media screen and (max-width:450px) { 
+  .elements{
+    max-width: 88%;
+    padding-top: 36px;
+    margin: 0 auto;
+  }
+ } 
