--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -5,3 +5,17 @@
   margin-top: 67px;
   padding-bottom: 60px;
 }
+
+@media screen and (max-width:950px) {
+  .footer{
+    max-width: 90%;
+  }
+}
+
+@media screen and (max-width:450px) {
+    .footer{
+      max-width: 88%;
+      margin-top: 48px;
+      padding-bottom: 36px;
+    }
+}
