--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -9,3 +9,11 @@
   position: relative;
   right: -430px;
 }
+
+@media screen and (max-width:450px) {
+  .popup__button-close{
+    right: -262px;
+    width: 20px;
+    height: 20px;
+  }
+}
