--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -13,3 +13,16 @@
   justify-content: center;
   padding: 0;
 }
+
+@media screen and (max-width:450px) {
+  .popup__button-save{
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    margin: 0 auto;
+    width: 238px;
+    height: 46px;
+    margin: 45px auto 25px auto;
+  }
+}
