--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,3 +1,9 @@
 .popup__container {
   max-width: 470px;
 }
+
+@media screen and (max-width:450px){
+  .popup__container{
+    max-width: 88%;
+  }
+}
