--- a/blocks/popup/__edit-descriptio/popup__edit-descriptio.css
+++ b/blocks/popup/__edit-descriptio/popup__edit-descriptio.css
@@ -10,3 +10,10 @@
   margin: 30px 36px 0 36px;
   max-height: 27px;
 }
+
+@media screen and (max-width:450px) {
+  .popup__edit-description{
+    margin: 30px 22px 0 22px;
+    max-width: 238px;
+  }
+}
