--- a/blocks/popup/__edit-name/popup__edit-name.css
+++ b/blocks/popup/__edit-name/popup__edit-name.css
@@ -10,3 +10,10 @@
   margin: 54px 36px 0 36px;
   max-height: 27px;
 }
+
+@media screen and (max-width:450px) {
+  .popup__edit-name{
+    margin: 75px 22px 0 22px;
+    max-width: 238px;
+  }
+}
