--- a/blocks/popup/__edit-profile/popup__edit-profile.css
+++ b/blocks/popup/__edit-profile/popup__edit-profile.css
@@ -1,3 +1,15 @@
 .popup__edit-profile {
   margin: 34px auto auto 36px;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
+}
+
+@media screen and (max-width:450px) {
+  .popup__edit-profile{
+    font-weight: 900;
+    font-size: 18px;
+    line-height: 22px;
+    margin: 25px auto auto 22px;
+  }
 }
