--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -4,3 +4,9 @@
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
 }
+
+@media screen and (max-width: 450px) {
+  .profile__avatar{
+    margin: 0 auto;
+  }
+}
