--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -7,10 +7,9 @@
   grid-row: 1;
 }
 
-.element__heart_button{
-  width: 22px;
-  height: 19px;
-  margin: 30px 30px 30px auto;
-  grid-row: 2; 
-  grid-column: 1;
+@media screen and (max-width:450px) {
+  .profile__edit-button{
+    width: 18px;
+    height: 18px;
+  }
 }
