--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -1,13 +1,8 @@
 .profile__edit{
-  background-image: url(../../../images/profile/edit_b.svg);
-  border: none;
+  background-image: url(../../../images/profile/edit-button.svg);
+  background-position: center;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
   background-color: black;
   background-repeat: no-repeat;
-  opacity: 1;
-  transition-duration: 2s;
-}
-
-.profile__edit:hover{
-  opacity: 0.5;
-  transition-duration: 2s;
 }
