--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -10,3 +10,13 @@
   white-space: nowrap;
   overflow: hidden;
 }
+
+@media screen and (max-width:450px) {
+  .profile__name{
+    font-weight: 500;
+    font-size: 27px;
+    line-height: 33px;
+    text-align: center;
+    padding-top: 22.25px;
+  }
+}
