--- a/blocks/elements/__heart/element__heart-active.css
+++ b/blocks/elements/__heart/element__heart-active.css
@@ -4,5 +4,5 @@
   display: block;
   opacity: 1;
   transition-duration: 2s;
-  background-image: url(../../../images/element/__heart-active.svg)
+  background-image: url(../../../images/element/__heart-active.svg);
 }
