--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,4 +1,4 @@
-.elements{
+.photo-grid{
   display: grid;
   color: black;
   list-style-type: none;
@@ -11,14 +11,14 @@
 }
 
 @media screen and (max-width:950px) { 
-  .elements{
+  .photo-grid{
     max-width: 100%;
     padding-top: 36px;
   }
 } 
 
 @media screen and (max-width:800px) { 
-  .elements{
+  .photo-grid{
     max-width: 90%;
     padding-top: 36px;
     margin: 0 auto;
@@ -26,7 +26,7 @@
 } 
 
 @media screen and (max-width:450px) { 
-  .elements{
+  .photo-grid{
     max-width: 88%;
     padding-top: 36px;
     margin: 0 auto;
