--- a/pages/index.css
+++ b/pages/index.css
@@ -15,14 +15,14 @@
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
-/* elements */
-@import url(../blocks/elements/elements-container.css);
-@import url(../blocks/elements/elements.css);
-@import url(../blocks/elements/__image/element__image.css);
-@import url(../blocks/elements/__title/element__title.css);
-@import url(../blocks/elements/__heart/element__heart.css);
-@import url(../blocks/elements/__heart/element__heart_button.css);
-@import url(../blocks/elements/__heart/element__heart-active.css);
+/* photo-grid */
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/card/card.css);
+@import url(../blocks/photo-grid/card/__image/card__image.css);
+@import url(../blocks/photo-grid/card/__title/card__title.css);
+@import url(../blocks/photo-grid/card/__like/card__like.css);
+@import url(../blocks/photo-grid/card/__like/card__like_button.css);
+@import url(../blocks/photo-grid/card/__like/card__like-active.css);
 /* footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
