последние правки перед ревью

--- a/blocks/photo-grid/card/__like/card__like-active.css
+++ b/blocks/photo-grid/card/__like/card__like-active.css
@@ -3,4 +3,5 @@
   outline: none;
   display: block;
   background-image: url(../../../../images/photo-grid/like-active.svg);
+  background-color: white;
 }
