--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -5,4 +5,11 @@
   box-sizing: border-box;
   background-color: black;
   background-repeat: no-repeat;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width:700px){
+  .profile__edit{
+    margin-bottom: 7px;
+  }
 }
