--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,11 +2,12 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
+  margin: 0;
+  padding: 0;
 }
 
 @media screen and (max-width:450px) {
   .footer__copyright{
-    font-weight: normal;
     font-size: 14px;
     line-height: 17px;
   }
