--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -5,15 +5,20 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  margin: 36px 36px 37px 36px;
+  margin: 18px 36px 37px 36px;
   text-align: center;
   width: 358px;
   height: 50px;
   justify-content: center;
   padding: 0;
+  transition-duration: 0s;
 }
 
-@media screen and (max-width:450px) {
+.popup__button-save:hover{
+  transition-duration: 0s;
+}
+
+@media screen and (max-width:550px) {
   .popup__button-save{
     font-weight: normal;
     font-size: 14px;
@@ -21,6 +26,6 @@
     text-align: center;
     width: 238px;
     height: 46px;
-    margin: 45px auto 25px auto;
+    margin: 15px auto 25px auto;
   }
 }
