--- a/blocks/profile/__description/profile__description.css
+++ b/blocks/profile/__description/profile__description.css
@@ -10,4 +10,17 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 350px;
+}
+
+@media screen and (max-width:700px) {
+    .profile__description{
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 17px;
+      text-align: start;
+      margin-left: 21px;
+      padding-top: 1px;
+      max-width: 200px;
+    }
 }
