--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -8,10 +8,19 @@
   align-items: end;
 }
 
+@media screen and (max-width:800px) {
+  .profile__name{
+    max-width: 300px;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .profile__info{
     max-width: 100%;
-    grid-row-gap: 14px;
+    grid-row-gap: 2px;
     grid-column-gap: 10px;
+    align-items: center;
+    padding-top: 25.25px;
+    max-width: 200px;
   }
 }
