--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -9,6 +9,13 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  max-width: 350px;
+}
+
+@media screen and (max-width:800px) {
+  .profile__name{
+    max-width: 300px;
+  }
 }
 
 @media screen and (max-width:700px) {
@@ -17,6 +24,8 @@
     font-size: 27px;
     line-height: 33px;
     text-align: center;
-    padding-top: 22.25px;
+    padding-bottom: 0;
+    max-width: 200px;
+    margin-left: 5px;
   }
 }
