--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -7,7 +7,7 @@
 
 @media screen and (max-width: 950px) {
   .profile{
-    width: 96%;
+    width: 90%;
     margin: 0 auto;
   }
 }
@@ -24,5 +24,6 @@
     align-items: center;
     flex-direction: column;
     width: 100%;
+    margin: 0 auto;
   }
 }
