--- a/blocks/profile/__info/profile__info.css
+++ b/blocks/profile/__info/profile__info.css
@@ -9,14 +9,13 @@
 }
 
 @media screen and (max-width:800px) {
-  .profile__name{
+  .profile__info{
     max-width: 300px;
   }
 }
 
 @media screen and (max-width: 700px) {
   .profile__info{
-    max-width: 100%;
     grid-row-gap: 2px;
     grid-column-gap: 10px;
     align-items: center;
