правки после 2-го ревью

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,7 +2,7 @@
   max-width: 880px;
   padding-top: 45px;
   margin: 0 auto;
-  border-bottom: 1px solid rgba(94, 93, 93, 0.7);
+  border-bottom: 1px solid #545454;
 }
 
 @media screen and (max-width: 900px) {
