--- a/blocks/popup/__edit-info/popup__edit-info.css
+++ b/blocks/popup/__edit-info/popup__edit-info.css
@@ -3,12 +3,11 @@
   font-size: 14px;
   line-height: 17px;
   border: 0;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
   min-width: 358px;
-  padding: 0;
+  padding: 0 0 11px 0;
   margin:0 auto;
-  max-height: 27px;
 }
   
 @media screen and (max-width:550px) {
