--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -5,7 +5,7 @@
   background-position: center;
   width: 150px;
   height: 50px;
-  background-color: black;
+  background-color: transparent;
   justify-self: flex-end;
   margin-left: auto;
   padding: 0;
@@ -14,11 +14,10 @@
   border-radius: 2px;
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:720px) {
   .profile__add-button{
     background-size: 16px 16px;
     margin: 36px auto 0 auto;
     width: 282px;
-    height: 50px;
   }
 }
