--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -5,11 +5,19 @@
   padding: 0;
   grid-column: 2;
   grid-row: 1;
+  background-image: url(../../../images/profile/__edit-button.svg);
+  background-position: center;
+  border: 1px solid #FFFFFF;
+  box-sizing: border-box;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  margin-bottom: 10px;
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width:720px) {
   .profile__edit-button{
     width: 18px;
     height: 18px;
+    margin-top: 10px;
   }
 }
