--- a/pages/index.css
+++ b/pages/index.css
@@ -13,16 +13,15 @@
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
-@import url(../blocks/profile/__edit/profile__edit.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
 /* photo-grid */
 @import url(../blocks/photo-grid/photo-grid.css);
-@import url(../blocks/photo-grid/card/card.css);
-@import url(../blocks/photo-grid/card/__image/card__image.css);
-@import url(../blocks/photo-grid/card/__title/card__title.css);
-@import url(../blocks/photo-grid/card/__like/card__like.css);
-@import url(../blocks/photo-grid/card/__like/_button/card__like_button.css);
-@import url(../blocks/photo-grid/card/__like/card__like-active.css);
+@import url(../blocks/card/card.css);
+@import url(../blocks/card/__image/card__image.css);
+@import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__like/card__like.css);
+@import url(../blocks/card/__like/_button/card__like_button.css);
+@import url(../blocks/card/__like/card__like-active.css);
 /* footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
