--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -14,7 +14,14 @@
   border-radius: 2px;
 }
 
-@media screen and (max-width:720px) {
+@media screen and (max-width:800px) {
+  .profile__add-button{
+    background-size: 18px 18px;
+    width: 120px;
+  }
+}
+
+@media screen and (max-width:700px) {
   .profile__add-button{
     background-size: 16px 16px;
     margin: 36px auto 0 auto;
