--- a/blocks/popup/__button-close/popup__button-close.css
+++ b/blocks/popup/__button-close/popup__button-close.css
@@ -6,18 +6,16 @@
   height: 32px;
   background-color: transparent;
   border: none;
-  position: relative;
-  right: -430px;
-  transition-duration: 0s;
-}
-
-.popup__button-close:hover{
-  transition-duration: 0s;
+  position: absolute;
+  right: -40px;
+  top: -40px;
+  padding: 0;
+  transition: opacity .3s;
 }
 
 @media screen and (max-width:550px) {
   .popup__button-close{
-    right: -262px;
+    right: 0;
     width: 20px;
     height: 20px;
     margin-bottom: 16px;
