--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -11,5 +11,5 @@
   position: fixed;
   width: 100%;
   visibility: hidden;
-  transition-duration: 0;
+  transition: visibility .3s, opacity .3s;
 }
