--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -4,8 +4,8 @@
   border-radius: 10px;
   color: black;
   display: grid;
-  grid-row-gap: 30px;
   z-index: 2;
+  max-width: 430px;
 }
 
 @media screen and (max-width: 550px){
