--- a/pages/index.css
+++ b/pages/index.css
@@ -22,8 +22,6 @@
 @import url(../blocks/card/__like/card__like.css);
 @import url(../blocks/card/__like/_active/card__like-active.css);
 @import url(../blocks/card/__delete/card__delete.css);
-
-
 /* footer */
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
@@ -40,6 +38,10 @@
 @import url(../blocks/popup/__image-form/popup__image-form.css);
 @import url(../blocks/popup/__image-name/popup__image-name.css);
 @import url(../blocks/popup/__image-url/popup__image-url.css);
-
-
-
+/* validate */
+@import url(../blocks/popup/__error/popup__error.css);
+@import url(../blocks/popup/__error/_visible/popup__error_visible.css);
+@import url(../blocks/popup/__button-save/_disabled/popup__button-save_disabled.css);
+@import url(../blocks/popup/__edit-info/_error/popup__edit-info_error.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__form-set/popup__form-set.css);
