--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -5,7 +5,7 @@
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
-  margin: auto 36px 36px 36px;
+  margin: 16px 36px 36px 36px;
   text-align: center;
   width: 358px;
   height: 50px;
@@ -13,6 +13,15 @@
   padding: 0;
   opacity: 1;
   transition-duration: 0s;
+}
+
+.popup__button-save:disabled{
+  background-color: #fff;
+  border: 1px solid #000;
+  color: #000;
+  opacity: .2;
+  pointer-events: none;
+  user-select: none;
 }
 
 .popup__button-save:hover{
