--- a/src/blocks/popup/__edit-info/popup__edit-info.css
+++ b/src/blocks/popup/__edit-info/popup__edit-info.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   min-width: 358px;
   padding: 0 0 11px 0;
+  margin: auto;
 }
   
 @media screen and (max-width:550px) {
