--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,17 +9,21 @@
 /* profile */
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
+@import url(../blocks/profile/__avatar-container/profile__avatar-container.css);
+@import url(../blocks/profile/__avatar-button/profile__avatar-button.css);
 @import url(../blocks/profile/__info/profile__info.css);
 @import url(../blocks/profile/__name/profile__name.css);
 @import url(../blocks/profile/__description/profile__description.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
-/* photo-grid */
+/* card */
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/card/card.css);
 @import url(../blocks/card/__image/card__image.css);
 @import url(../blocks/card/__title/card__title.css);
+@import url(../blocks/card/__like-container/card__like-container.css);
 @import url(../blocks/card/__like/card__like.css);
+@import url(../blocks/card/__like-number/card__like-number.css);
 @import url(../blocks/card/__like/_active/card__like-active.css);
 @import url(../blocks/card/__delete/card__delete.css);
 /* footer */
