--- a/main.css
+++ b/main.css
@@ -6,7 +6,9 @@
 .header{border-bottom:1px solid rgba(84,84,84,.7);margin:0 auto;max-width:880px;padding-top:45px}@media screen and (max-width:900px){.header{margin:0 auto;width:90%}}@media screen and (max-width:450px){.header{padding-top:28px;width:100%}}
 .header__logo{height:33px;padding-bottom:41px;width:142px}@media screen and (max-width:450px){.header__logo{height:24.4px;margin-left:27px;padding-bottom:31.6px;width:103.74px}}
 .profile{align-items:center;display:flex;padding-top:36.25px;position:relative}@media screen and (max-width:950px){.profile{margin:0 auto;width:90%}}@media screen and (max-width:700px){.profile{align-items:center;flex-direction:column;width:100%}}
-.profile__avatar{border-radius:50%;max-height:120px;max-width:120px}@media screen and (max-width:700px){.profile__avatar{margin:0 auto}}
+.profile__avatar{border-radius:50%;height:100%;width:100%}@media screen and (max-width:700px){.profile__avatar{margin:0 auto}}
+.profile__avatar-container{height:120px;position:relative;width:120px}@media (max-width:950px){.profile__avatar-container{margin-left:27px}}@media (max-width:550px){.profile__avatar-container{margin:0}}
+.profile__avatar-button{background-color:rgba(0,0,0,.8);background-image:url(6c7bf05444b9793fdf6e.svg);background-position:50%;background-repeat:no-repeat;background-size:26px 26px;border-radius:50%;cursor:pointer;height:120px;opacity:0;position:absolute;width:120px}.profile__avatar-button:hover{opacity:1}
 .profile__info{grid-column-gap:17px;grid-row-gap:16px;align-items:end;display:grid;grid-template-columns:-webkit-max-content -webkit-min-content;grid-template-columns:max-content min-content;grid-template-rows:repeat(2,-webkit-min-content);grid-template-rows:repeat(2,min-content);max-width:45%}@media screen and (max-width:950px){.profile__info{max-width:350px}}@media screen and (max-width:700px){.profile__info{grid-row-gap:2px;grid-column-gap:10px;align-items:center;max-width:200px;padding-top:25.25px}}
 .profile__name{font-size:42px;font-weight:500;grid-column:1;grid-row:1;line-height:48px;margin:0 0 0 30px;max-width:350px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:950px){.profile__name{max-width:300px}}@media screen and (max-width:700px){.profile__name{font-size:27px;line-height:33px;margin-left:5px;max-width:200px;padding-bottom:0;text-align:center}}
 .profile__description{font-size:18px;font-weight:400;grid-column:1/3;grid-row:2;line-height:22px;margin:0 0 0 30px;max-width:350px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:950px){.profile__description{max-width:250px}}@media screen and (max-width:700px){.profile__description{font-size:14px;line-height:17px;margin-left:21px;max-width:200px;padding-top:1px;text-align:start}}
@@ -16,7 +18,9 @@
 .card{background-color:#fff;border-radius:10px 10px 10px 10px;display:grid;overflow:hidden;position:relative}
 .card__image{grid-column:1;grid-row:1;height:282px;-o-object-fit:cover;object-fit:cover;padding:0;width:100%}
 .card__title{font-size:24px;font-weight:900;grid-column:1;grid-row:2;line-height:29px;margin:25px 0 0 21px;max-width:190px;overflow:hidden;padding:0;text-overflow:ellipsis;white-space:nowrap}
-.card__like{background:url(1ad06e85f169668a1f36.svg);background-repeat:no-repeat;border:none;display:block;grid-column:1;grid-row:2;height:19px;margin:30px 20px 30px auto;opacity:1;outline:none;transition-duration:2s;width:22px}.card__like:hover{opacity:.5;transition-duration:2s}
+.card__like-container{grid-column:1;grid-row:2;margin:22px 20px 22px auto}
+.card__like{background:url(1ad06e85f169668a1f36.svg);background-repeat:no-repeat;border:none;display:block;height:19px;opacity:1;outline:none;transition-duration:2s;width:22px}.card__like:hover{opacity:.5;transition-duration:2s}
+.card__like-number{color:#000;font-size:13px;font-weight:400;line-height:16px;margin:3px 0 0;text-align:center}
 .card__like-active{background-image:url(dd6a61e81552be95f4b7.svg)}
 .card__delete{background-color:transparent;background-image:url(ce3b64935accf9b8212e.svg);background-position:50%;background-repeat:no-repeat;border:none;display:block;grid-column:1;grid-row:1;height:19px;margin:20px 20px auto auto;outline:none;position:relative;width:18px}
 .footer{color:#545454;margin:67px auto 0;max-width:880px;padding-bottom:60px}@media screen and (max-width:950px){.footer{max-width:90%}}@media screen and (max-width:450px){.footer{margin-top:48px;max-width:88%;padding-bottom:36px}}
@@ -25,8 +29,8 @@
 .popup__container{max-width:470px;position:relative}@media screen and (max-width:550px){.popup__container{max-width:88%}}
 .popup_opened{opacity:1;visibility:visible}
 .popup__form{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);color:#000;display:grid;max-width:430px;z-index:2}@media screen and (max-width:550px){.popup__form{width:282px}}
-.popup__edit-profile{font-size:24px;font-weight:900;line-height:29px;margin:34px auto 49px 36px}@media screen and (max-width:550px){.popup__edit-profile{font-size:18px;line-height:22px;margin:25px auto 75px 22px}}
-.popup__edit-info{border:0;border-bottom:1px solid rgba(0,0,0,.2);box-sizing:border-box;font-size:14px;font-weight:400;line-height:17px;min-width:358px;padding:0 0 11px}@media screen and (max-width:550px){.popup__edit-info{min-width:238px}}
+.popup__edit-profile{font-size:24px;font-weight:900;line-height:29px;margin:34px auto 22px 36px}@media screen and (max-width:550px){.popup__edit-profile{font-size:18px;line-height:22px;margin:25px auto 53px 22px}}
+.popup__edit-info{border:0;border-bottom:1px solid rgba(0,0,0,.2);box-sizing:border-box;font-size:14px;font-weight:400;line-height:17px;margin:auto;min-width:358px;padding:0 0 11px}@media screen and (max-width:550px){.popup__edit-info{min-width:238px}}
 .popup__button-save{background-color:#000;border-radius:2px;color:#fff;font-size:18px;font-weight:400;height:50px;justify-content:center;line-height:22px;margin:16px 36px 36px;opacity:1;padding:0;text-align:center;transition-duration:0s;width:358px}.popup__button-save:disabled{background-color:#fff;border:1px solid #000;color:#000;opacity:.2;pointer-events:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.popup__button-save:hover{opacity:.8;transition-duration:0s}@media screen and (max-width:550px){.popup__button-save{font-size:14px;height:46px;line-height:17px;margin:15px 22px 25px;width:238px}}
 .popup__button-close{background-color:transparent;background-image:url(039f1f5203f653b4bacd.svg);background-repeat:no-repeat;background-size:100%;border:none;height:32px;padding:0;position:absolute;right:-40px;top:-40px;transition:opacity .3s;width:32px}@media screen and (max-width:550px){.popup__button-close{height:20px;margin-bottom:16px;right:0;width:20px}}
 .popup__container-image{margin:0;max-height:75vh;max-width:75vw;outline:none;padding:0;position:relative}@media screen and (max-width:900px){.popup__container-image{width:90%}}@media screen and (max-width:550px){.popup__container-image{width:75%}}
@@ -37,5 +41,5 @@
 .popup__error_visible{display:block}
 .popup__edit-info_error{border-bottom:1px solid red}
 .popup__field{margin:0 36px}@media screen and (max-width:550px){.popup__field{margin:0 22px}}
-.popup__form-set{grid-row-gap:30px;border:none;display:grid;margin:0;padding:0}
+.popup__form-set{grid-row-gap:30px;border:none;display:grid;margin:16px 0 0;padding:0}
 
